Add configuration to run the test for N number of users

--- a/kouple_backend_test.yml
+++ b/kouple_backend_test.yml
@@ -1,5 +1,5 @@
 execution:
-  iterations: 30
+  iterations: 10
   concurrency: 1
   hold-for: 2m
   ramp-up: 40s
@@ -7,15 +7,24 @@ execution:
 
 scenarios:
   kouple-backend:
+    data-sources: 
+    - path: ./users.csv  # this is a full form
+      delimiter: ','
+      quoted: false
+      loop: true
+      variable-names: phoneNumber,otp
+      random-order: false
     requests:
       - url: https://kouple-backend-docker.herokuapp.com/kouple/v1/api/auth/verify/otp
         method: POST
         label: verifyOTP
         content-encoding: utf-8
-        body-file: ./verifyOTP.json
         headers: 
           Accept: "application/json"
           Content-Type: "application/json"
+        body:
+          phoneNumber: ${phoneNumber}
+          otp: ${otp}
         extract-jsonpath: 
           accessToken:
             jsonpath: $.data.accessToken
