Added configurations for storing and reporting Load Test results

--- a/kouple_backend_test.yml
+++ b/kouple_backend_test.yml
@@ -1,3 +1,24 @@
+settings:
+  artifacts-dir: TaurusResult
+  aggregator: consolidator
+
+reporting:
+- module: console
+- module: final-stats
+  summary: true  # overall samples count and percent of failures
+  percentiles: true  # display average times and percentiles
+  failed-labels: false  # provides list of sample labels with failures
+  test-duration: true  # provides test duration
+  dump-csv: TaurusResult/perf_result_csv.csv
+- module: junit-xml
+  data-source: pass-fail
+  filename: TaurusResult/junit-result.xml
+- module: blazemeter
+  upload-artifacts: true
+  report-name: blazemeter_test_report.xml
+  test: kouple_backend_test.yml
+  project: kouple-backend
+
 execution:
   iterations: 10
   concurrency: 1
