--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ numpy==1.23.4
 progressbar33==2.4
 prompt-toolkit==3.0.31
 psutil==5.9.3
+psycopg2==2.9.5
 pymongo==4.3.2
 PyYAML==6.0
 rapidfuzz==2.12.0
